[package]
name = "sozu-acme"
version = "0.7.0"
license = "AGPL-3.0"
categories = ["command-line-utilities"]
repository = "https://github.com/sozu-proxy/sozu-acme"
description = "command line tool to set up or renew Let's Encrypt certificates for sozu HTTP reverse proxy"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]

[dependencies]
log = "0.4.14"
rand = "0.8.3"
clap = "2.33.3"
mio-uds = "0.6.8"
tiny_http = "0.8.0"
acme-lib = "0.8.1"
pretty_env_logger = "0.4.0"
sozu-command-lib = "0.11.52"
